--- a/04_categorize_nonpersonnel.qmd
+++ b/04_categorize_nonpersonnel.qmd
@@ -105,7 +105,7 @@ nonpersonnel_cat <-
   mutate(
     is_excluded = case_when(
       is_capital == "TRUE" ~ 1,
-      is_grant == "TRUE" ~ 1,
+      # is_grant == "TRUE" ~ 1,
       .default = is_excluded
     )
   ) %>%
