--- a/05_schedules.qmd
+++ b/05_schedules.qmd
@@ -284,7 +284,7 @@ schedule_i <-
     !is.na(is_excluded_equipment) ~ "equipment",
     !is.na(is_excluded_passthrough) ~ "passthrough",
     is_capital == "TRUE" ~ "capital",
-    is_grant == "TRUE" ~ "grant",
+    # is_grant == "TRUE" ~ "grant",
     is_po == "TRUE" ~ "subaward"
   )) %>%
   group_by(costcenter_name_clean, exclusion_type) %>%
